--- a/src/blocks/toggle/toggle/editor.scss
+++ b/src/blocks/toggle/toggle/editor.scss
@@ -21,8 +21,8 @@
 	}
 }
 
-[data-type="getwid/toggle"]{
-	&:not(.is-selected):not(.has-child-selected){
+[data-type="getwid/toggle-item"]{
+	&:not(.is-selected):not(.has-child-selected):not([toggle-active-default="true"]){
 		.wp-block-getwid-toggle-item{
 			.wp-block-getwid-toggle-item__content{
 				height: 0;
@@ -34,23 +34,39 @@
 	}
 }
 
-[data-type="getwid/toggle"]{
+[toggle-active-default="true"]{
+	.wp-block-getwid-toggle-item{
+		.wp-block-getwid-toggle-item__icon{
+			&.is-active{
+				display: none;
+			}
+
+			&.is-passive{
+				display: block;
+			}
+		}
+
+		.wp-block-getwid-toggle-item__content{
+			height: auto;
+		}
+	}
+}
+
+[data-type="getwid/toggle-item"]{
 	&.is-selected,
 	&.has-child-selected{
-		.wp-block-getwid-toggle-item{
-			.wp-block-getwid-toggle-item__icon{
-				&.is-active{
-					display: none;
-				}
-
-				&.is-passive{
-					display: block;
-				}
+		.wp-block-getwid-toggle-item__icon{
+			&.is-active{
+				display: none;
 			}
 
-			.wp-block-getwid-toggle-item__content{
-				height: auto;
+			&.is-passive{
+				display: block;
 			}
+		}
+
+		.wp-block-getwid-toggle-item__content{
+			height: auto;
 		}
 	}
 }
